[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-git",
]
build-backend = "setuptools.build_meta"

[project]
name = "arosics"
description = "An Automated and Robust Open-Source Image Co-Registration Software for Multi-Sensor Satellite Data"
authors = [{name = "Daniel Scheffler", email = "daniel.scheffler@gfz-potsdam.de"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "arosics",
    "image co-registration",
    "geometric pre-processing",
    "remote sensing",
    "sensor fusion",
]
requires-python = ">=3.8"
dependencies = [
    "cartopy",
    "cmocean",
    "folium>=0.6.0,!=0.12.0",
    "gdal",
    "geoarray>=0.15.0",
    "geojson",
    "geopandas",
    "joblib>=1.3.0",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "pykrige",
    "pyproj>2.2.0",
    "py_tools_ds>=0.18.0",
    "scikit-image>=0.21.0",
    "scikit-learn",
    "scipy>=1.7.0",
    "shapely",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
"Homepage" = "https://git.gfz-potsdam.de/danschef/arosics"
"Source code" = "https://git.gfz-potsdam.de/danschef/arosics"
"Issue Tracker" = "https://git.gfz-potsdam.de/danschef/arosics/-/issues"
"Documentation" = "https://danschef.git-pages.gfz-potsdam.de/arosics/doc/"
"Change log" = "https://git.gfz-potsdam.de/danschef/arosics/-/blob/main/HISTORY.rst"
"Algorithm paper" = "https://www.mdpi.com/2072-4292/9/7/676"
"Zenodo" = "https://zenodo.org/record/5093940"

[project.optional-dependencies]
interactive_plotting = [
    "holoviews",
    "ipython",
    "nbformat",
]
doc = [
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-reporter-html1",
    "urlchecker",
    "arosics[interactive_plotting]",
]
lint = [
    "flake8",
    "pycodestyle",
    "pydocstyle",
]
dev = [
    "arosics[test]",
    "arosics[doc]",
    "arosics[lint]",
]

[project.scripts]
arosics = "arosics.arosics_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "tests*",
]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "arosics.version.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.flake8]
exclude = "docs"
