[metadata]
name = arosics
version = attr: arosics.version.__version__
description = An Automated and Robust Open-Source Image Co-Registration Software for Multi-Sensor Satellite Data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://git.gfz-potsdam.de/danschef/arosics
author = Daniel Scheffler
author_email = daniel.scheffler@gfz-potsdam.de
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    arosics
    image co-registration
    geometric pre-processing
    remote sensing
    sensor fusion
project_urls =
    Source code = https://git.gfz-potsdam.de/danschef/arosics
    Issue Tracker = https://git.gfz-potsdam.de/danschef/arosics/-/issues
    Documentation = https://danschef.git-pages.gfz-potsdam.de/arosics/doc/
    Change log = https://git.gfz-potsdam.de/danschef/arosics/-/blob/main/HISTORY.rst
    Algorithm paper = https://www.mdpi.com/2072-4292/9/7/676
    Zenodo = https://zenodo.org/record/5093940

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    cartopy
    cmocean
    folium>=0.6.0,!=0.12.0
    gdal
    geoarray>=0.15.0
    geojson
    geopandas
    joblib>=1.3.0
    matplotlib
    numpy
    pandas
    plotly
    pykrige
    pyproj>2.2.0
    py_tools_ds>=0.18.0
    scikit-image>=0.21.0
    scikit-learn
    scipy>=1.7.0
    shapely
python_requires = >=3.8
setup_requires =
    setuptools-git

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[options.entry_points]
console_scripts =
    arosics = arosics.arosics_cli:main

[options.extras_require]
interactive_plotting =
    holoviews
    ipython
    nbformat
doc =
    sphinx-argparse
    sphinx_rtd_theme
    sphinx-autodoc-typehints
test =
    pytest
    pytest-cov
    pytest-reporter-html1
    urlchecker
    arosics[interactive_plotting]
lint =
    flake8
    pycodestyle
    pydocstyle
dev =
    arosics[test]
    arosics[doc]
    arosics[lint]

[options.packages.find]
exclude =
    docs*
    tests*
